decouple doNetworkLine in individual functions
arguements are passed in a reader environment. The usual Nothing case in
the old code is provided by the ExceptT. Thus all the code lives a monad
Env that provide this

--- a/glirc.cabal
+++ b/glirc.cabal
@@ -143,6 +143,7 @@ library
                        text                 >=1.2.2  && <1.3,
                        time                 >=1.6    && <1.7,
                        transformers         >=0.5.2  && <0.6,
+                       mtl,
                        unix                 >=2.7    && <2.8,
                        unordered-containers >=0.2.7  && <0.3,
                        vector               >=0.11   && <0.12,
